--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,67 @@
-annotated-types==0.7.0
+asgiref==3.9.1
 astroid==3.3.11
+autopep8==2.0.4
+black==25.1.0
+blinker==1.9.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
 colorama==0.4.6
+debugpy==1.8.16
 dill==0.4.0
-greenlet==3.2.4
+distlib==0.4.0
+Django==5.2.5
+django-tastypie==0.15.1
+docstring-to-markdown==0.17
+filelock==3.19.1
+flake8==7.1.2
+Flask==3.1.1
+idna==3.10
+importlib_metadata==8.7.0
 isort==6.0.1
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+loguru==0.6.0
+MarkupSafe==3.0.2
 mccabe==0.7.0
-mypy==1.17.1
 mypy_extensions==1.1.0
+notify_py==0.3.43
+numpy==2.3.2
+packaging==25.0
+parso==0.8.5
 pathspec==0.12.1
+pillow==11.3.0
 platformdirs==4.3.8
-pydantic==2.11.7
-pydantic_core==2.33.2
+pluggy==1.6.0
+plyer==2.1.0
+pycodestyle==2.12.1
+pydocstyle==6.3.0
+pyflakes==3.2.0
+pygame==2.6.1
 pylint==3.3.8
-python-dotenv==1.1.1
-SQLAlchemy==2.0.43
-sqlmodel==0.0.24
+pypiwin32==223
+python-dateutil==2.9.0.post0
+python-lsp-jsonrpc==1.1.2
+python-lsp-server==1.13.1
+python-mimeparse==2.0.0
+pytoolconfig==1.3.1
+pywin32==311
+requests==2.32.4
+rope==1.14.0
+setuptools==80.9.0
+six==1.17.0
+snowballstemmer==3.0.1
+sqlparse==0.5.3
 tomlkit==0.13.3
-typing-inspection==0.4.1
-typing_extensions==4.14.1
+typing_extensions==4.15.0
+tzdata==2025.2
+ujson==5.11.0
+urllib3==2.5.0
+virtualenv==20.34.0
+Werkzeug==3.1.3
+whatthepatch==1.0.7
+win10toast==0.9
+win32_setctime==1.2.0
+yapf==0.43.0
+zipp==3.23.0
